[gd_scene load_steps=6 format=3 uid="uid://227vi3ej3cbm"]

[ext_resource type="Script" path="res://console/console.gd" id="1_72jqc"]
[ext_resource type="PackedScene" uid="uid://bxgjb04bffhdw" path="res://console/console-button.tscn" id="2_k5k71"]
[ext_resource type="FontFile" uid="uid://dryux6cq617un" path="res://console/consolas.TTF" id="3_8mgpf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8pwa5"]
bg_color = Color(0, 0, 0, 0.545098)

[sub_resource type="LabelSettings" id="LabelSettings_xdoyf"]
font_size = 17
font_color = Color(1, 1, 1, 0.5)

[node name="Console" type="CanvasLayer"]
layer = 5
script = ExtResource("1_72jqc")
button_scene = ExtResource("2_k5k71")

[node name="Console" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8pwa5")

[node name="LastExecuted" type="Label" parent="Console"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -298.0
offset_right = 339.0
offset_bottom = -262.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_8mgpf")
label_settings = SubResource("LabelSettings_xdoyf")

[node name="Command" type="LineEdit" parent="Console"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 25.0
offset_top = 18.0
offset_right = -543.0
offset_bottom = 57.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_8mgpf")
theme_override_font_sizes/font_size = 22
placeholder_text = "ENTER to execute command. Type \"help\" for more info"
editable = false

[node name="Output" type="RichTextLabel" parent="Console"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -258.0
offset_right = 955.0
offset_bottom = 342.0
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_8mgpf")
theme_override_fonts/mono_font = ExtResource("3_8mgpf")
theme_override_fonts/italics_font = ExtResource("3_8mgpf")
theme_override_fonts/bold_italics_font = ExtResource("3_8mgpf")
theme_override_fonts/bold_font = ExtResource("3_8mgpf")
bbcode_enabled = true
scroll_following = true
tab_size = 5

[node name="ScrollContainer" type="ScrollContainer" parent="Console"]
layout_mode = 2
offset_left = 986.0
offset_top = 84.0
offset_right = 1260.0
offset_bottom = 635.0
horizontal_scroll_mode = 0

[node name="Scope" type="VBoxContainer" parent="Console/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ScopeName" type="Label" parent="Console"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 773.0
offset_top = 21.0
offset_right = 1069.0
offset_bottom = 44.0
scale = Vector2(1.28959, 1.28959)
text = "Scope: arena"
horizontal_alignment = 2
text_overrun_behavior = 1

[node name="ScopeBack" parent="Console" instance=ExtResource("2_k5k71")]
layout_mode = 0
offset_left = 1185.0
offset_top = 21.0
offset_right = 1257.0
offset_bottom = 56.0
text = "Back"

[node name="ColorPicker" type="ColorPicker" parent="Console"]
layout_mode = 0
offset_left = 400.0
offset_top = 350.0
offset_right = 698.0
offset_bottom = 650.0
edit_alpha = false
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="TrackText" type="RichTextLabel" parent="."]
unique_name_in_owner = true
clip_contents = false
offset_left = 20.0
offset_top = 18.0
offset_right = 706.0
offset_bottom = 426.0
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_constants/line_separation = 1
theme_override_fonts/normal_font = ExtResource("3_8mgpf")
text = "test
test
test
test
test
test
tset"
autowrap_mode = 2

[node name="ValuesText" type="RichTextLabel" parent="."]
unique_name_in_owner = true
clip_contents = false
offset_left = 19.0
offset_top = 444.0
offset_right = 407.0
offset_bottom = 708.0
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_constants/line_separation = 1
theme_override_fonts/normal_font = ExtResource("3_8mgpf")
autowrap_mode = 2

[connection signal="mouse_entered" from="Console/Command" to="." method="_on_scope_mouse_exited"]
[connection signal="text_submitted" from="Console/Command" to="." method="_on_line_edit_text_submitted"]
[connection signal="mouse_entered" from="Console/Output" to="." method="_on_scope_mouse_exited"]
[connection signal="mouse_entered" from="Console/ScopeBack" to="." method="_on_scope_mouse_exited"]
[connection signal="pressed" from="Console/ScopeBack" to="." method="_on_scope_back_pressed"]
[connection signal="color_changed" from="Console/ColorPicker" to="." method="_on_color_picker_color_changed"]
